# djurable

./: README.md
djurable/: .gitignore  README.md  context.md  cookiecutter.json  docker-compose.yml  main.py  pyproject.toml
djurable/{{cookiecutter.project_slug}}/_api_config/: __init__.py  urls.py
djurable/{{cookiecutter.project_slug}}/_ws_config/: __init__.py  asgi.py  routing.py
djurable/{{cookiecutter.project_slug}}/apps/core/: consumers.py  models.py
djurable/{{cookiecutter.project_slug}}/apps/crawlers/: __init__.py  admin.py  apps.py  models.py  tasks.py
djurable/{{cookiecutter.project_slug}}/apps/streams/: __init__.py  admin.py  apps.py  consumers.py  models.py
djurable/{{cookiecutter.project_slug}}/config/: __init__.py  settings.py  setup.py  urls.py  widgets.py
